# beatnik

./: .gitignore  .gitmodules  README.md  beatnik-store.key  build.gradle  store.key
app/: .gitignore  Android.mk  Application.mk  build.gradle  compiler-file.d  compiler-file1.d  compiler-file2.d  proguard-rules.pro
app/src/androidTest/java/re/bass/beatnik/: ExampleInstrumentationTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: Android.mk  CMakeLists.txt  beat-analyzer.cpp  beatnik_jni.cpp  btrack.cpp  cpu-features.cpp  df-processor.cpp  log.h  missing_std.hpp  native-lib.cpp
app/src/main/cpp/beatnik/: Balanced_ACF.cpp  Balanced_ACF.hpp  FFT_rolling.cpp  FFT_rolling.hpp  Window.hpp
app/src/main/cpp/tracker/: BTrack.cpp  BTrack.hpp  Balanced_ACF.hpp  Beat_analyzer.cpp  Beat_analyzer.hpp  Beat_counter.cpp  Beat_counter.hpp  Broadband_DF.hpp  CSD_detection_function.cpp  CSD_detection_function.hpp  FFT_rolling.hpp  RCF_processor.hpp  Tracker.cpp  Tracker.hpp  Viterbi_decoder.hpp  constants.hpp  math_utilities.cpp  math_utilities.hpp
app/src/main/cpp/tracker/fft/: Balanced_ACF.hpp  FFT_rolling.hpp  Hanning_window.hpp  Kiss_FFTR.hpp
app/src/main/java/re/bass/beatnik/: App.java  AudioInput.java  AudioProcessor.java  AudioReceiver.java  BeatAnalyzer.java  BeatnikOptions.java  DFAudioProcessor.java  Destroyable.java  MainActivity.java  Microphone.java  NativeAudioListener.java  OnStopListener.java  Startable.java  Stoppable.java
app/src/main/java/re/bass/beatnik/activities/: MainActivity.java
app/src/main/java/re/bass/beatnik/audio/: AudioInput.java  AudioProcessor.java  BTrack.java  BeatAnalyzer.java  Beatnik.java  DFAudioProcessor.java  DFProcessor.java  FFTProcessor.java  Microphone.java  NativeDFProcessor.java
app/src/main/java/re/bass/beatnik/plot/: FFTGLPlotView.java  FFTPlotView.java  GLPlotView.java  PlotRenderer.java  PlotUpdater.java  PlotView.java  RenderThread.java  RollingGLPlotView.java  RollingPlotView.java
app/src/main/java/re/bass/beatnik/tool/: FontManager.java
app/src/main/java/re/bass/beatnik/utils/: CPUFeatures.java  (+2 more)
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: colors.xml  strings.xml  styles.xml
app/src/main/res/values-v21/: styles.xml
app/src/test/java/re/bass/beatnik/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
(+3 files in other folders)
